@@ -1,25 +1,11 @@
 #!/usr/bin/make -f
 
-FINGER_VERSION = $(shell dpkg-query --showformat='$${Version}' --show bsd-finger)
-# From the changelog for bsd-finger
-NEW_FINGER = $(shell dpkg --compare-versions $(FINGER_VERSION) ge '0.17-13~' && echo y)
-
 DEB_DIVERT_EXTENSION = .debathena
-
-ifneq ($(NEW_FINGER),y)
-    # Older packages, continue to divert
-    DEB_DIVERT_FILES_debathena-finger-config += \
+DEB_DIVERT_FILES_debathena-finger-config += \
 	/usr/bin/finger.debathena
-    DEB_UNDIVERT_FILES_debathena-finger-config += \
+DEB_UNDIVERT_FILES_debathena-finger-config += \
 	/usr/share/man/man1/finger.debathena.1.gz
-    DEB_UNDIVERT_VERSION_/usr/share/man/man1/finger.debathena.1.gz = 1.0debathena3~
-else
-    DEB_UNDIVERT_FILES_debathena-finger-config += \
-	/usr/bin/finger.debathena \
-	/usr/share/man/man1/finger.debathena.1.gz
-    DEB_UNDIVERT_VERSION_/usr/bin/finger.debathena = 1.5~
-    DEB_UNDIVERT_VERSION_/usr/share/man/man1/finger.debathena.1.gz = 1.0debathena3~
-endif
+DEB_UNDIVERT_VERSION_/usr/share/man/man1/finger.debathena.1.gz = 1.0debathena3~
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/rules/config-package.mk
